# matrix_analysis

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.py  pytest.py  tempCodeRunnerFile.py  tempCodeRunnerFile.sh  test.py
include/: complexvar.h  errordouble.h  matrix.h  utilities.h  vector.h
matrix_analysis/: __init__.py  __init__.pyi  __init__pyi  funcs.py  funcs.pyi  var.pyi
matrix_analysis/matrix/: __init__.py  __init__.pyi
matrix_analysis/var/: __init__.py  __init__.pyi
py/: setup.py  test.py
py/tests/: Testcase.py  matrix.py  others.py  var.py
srcs/: ComplexVar.cpp  ComplexVarObject.cpp  MatrixObject.cpp  MatrixObjectCal.cpp  Matrix_Equivalence.cpp  ModuleMethods.cpp  VectorObject.cpp  VectorObjectCal.cpp  custom_exceptions.cpp  errordouble.cpp  errordoubleObject.cpp  stub.cc  unsure.cpp  utilities.cpp
